[package]
name = "deloran_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan_device = { path = "../DeLoRaN/lorawan_device"}
network_controller = { path = "../DeLoRaN/network_controller"}
lorawan = { path = "../DeLoRaN/lorawan"}
async-trait = "0.1.76"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
rand = "0.8.5"
lazy_static = "1.4.0"
