[package]
name = "deloran_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lorawan_device = { path = "../DeLoRaN/lorawan_device"}
network_controller = { path = "../DeLoRaN/network_controller"}
lorawan = { path = "../DeLoRaN/lorawan"}
async-trait = "0.1.82"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.8.5"
lazy_static = "1.5.0"
ctrlc = "3.4.5"
paho-mqtt = "0.12.5"
prost = "0.13.2"
prost-types = "0.13.2"
reqwest = "0.12.7"
